增加对爬虫的屏蔽，增加CSRF

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "dependencies": {
     "egg": "^2.0.0",
+    "egg-cors": "^2.0.0",
     "egg-scripts": "^2.1.0",
-    "koa-compress": "^2.0.0"
+    "koa-compress": "^2.0.0",
+    "ua_parser": "^1.2.3"
   },
   "devDependencies": {
     "autod": "^3.0.1",
